# dictmsgr

./: README.md  pyproject.toml
src/dictmsgr/: __init__.py
