[build-system]
requires = ["setuptools>=61.0.0", "wheel", "varname >= 0.8.1", "tqdm"]
build-backend = "setuptools.build_meta"

[project]
name = "dictmsgr"
description = "Single-thread dict-based messenger inspired by the Robot Operation System."
keywords = ["dict", "messenger"]
classifiers = ["Development Status :: 5 - Production/Stable",
 "Environment :: Console",
 "Intended Audience :: Science/Research",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "dictmsgr.__version__"}